--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -128,11 +128,6 @@ nav .navNarrow .narrowLinks a {
 
 @media only screen and (max-width: 690px) {
 
-
-  .header-title {
-    margin-left: -30px;
-  }
-
   nav .navWide {
     margin-right: 50px;
   }
@@ -143,7 +138,12 @@ nav .navNarrow .narrowLinks a {
 
 }
 
+@media only screen and (max-width: 800px) {
 
+  .header-title {
+    margin-left: -30px;
+  }
+}
 @media only screen and (max-width: 600px) {
 
   header {
