--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -42,12 +42,13 @@ nav .navWide {
 
 nav .navWide .wideDiv {
   text-align: end;
+  margin-top: 7px;
 }
 
 nav .navWide .wideDiv a {
   text-decoration: none;
   display: inline-block;
-  margin: 5px 15px 0 0;
+  margin: 5px 15px 0 50px;
 }
 
 nav .navWide .wideDiv a:hover {
@@ -137,6 +138,14 @@ nav .navNarrow .narrowLinks a {
 
 }
 
+@media only screen and (max-width: 1024px) {
+
+  nav .navWide .wideDiv a {
+    margin-left: 20px;
+  }
+
+}
+
 @media only screen and (max-width: 800px) {
 
   .header-title {
@@ -164,6 +173,13 @@ nav .navNarrow .narrowLinks a {
     padding-bottom: 15px;
   }
 
+  nav .navWide .wideDiv  {
+    margin-left: -20px;
+  }
+
+  nav .navWide .wideDiv a {
+    margin: 5px 5px 0 5px;
+  }
 
   nav .navWide {
     margin-top: 0;
