--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -158,6 +158,15 @@ nav .navNarrow .narrowLinks a {
 
 }
 
+
+@media only screen and (max-width: 550px) {
+
+  nav .navWide .wideDiv  {
+    right: 0;
+  }
+
+}
+
 @media only screen and (max-width: 600px) {
 
   header {
@@ -174,11 +183,13 @@ nav .navNarrow .narrowLinks a {
   }
 
   nav .navWide .wideDiv  {
-    margin-left: -20px;
+    margin-left: 0;
+    position: relative;
+    right: 20px;
   }
 
   nav .navWide .wideDiv a {
-    margin: 5px 5px 0 5px;
+    margin: 5px 5px 0 15px;
   }
 
   nav .navWide {
@@ -211,6 +222,8 @@ nav .navNarrow .narrowLinks a {
 
 }
 
+
+
 @media only screen and (max-width: 350px) {
   .navNarrow {
     margin-right: -20px;
@@ -225,5 +238,6 @@ nav .navNarrow .narrowLinks a {
     margin-left: -35px;
   }
 }
+
 
 
