--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -77,6 +77,11 @@ p.p2.heading {
     font-size: 40px;
     padding-top: 20px;
   }
+
+  p.p2.heading {
+    width: 70vw;
+  }
+
 }
 
 @media only screen and (max-width: 420px) {
