--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -22,6 +22,7 @@ p, p.p2 {
 p.p2.heading {
   text-align: center;
   margin-top: 30px;
+  font-family: 'Oswald', sans-serif;
 }
 
 .projects-button {
